@@ -1,13 +1,16 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.config.server.application;
 
+import ai.vespa.http.HttpURL;
+import ai.vespa.http.HttpURL.Path;
 import ai.vespa.http.HttpURL.Query;
 import com.yahoo.config.model.api.HostInfo;
 import com.yahoo.config.model.api.Model;
 import com.yahoo.config.model.api.ServiceInfo;
 import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.container.jdisc.HttpResponse;
-import ai.vespa.http.HttpURL.Path;
+import com.yahoo.slime.Slime;
+import com.yahoo.slime.SlimeUtils;
 import com.yahoo.vespa.config.server.http.HttpFetcher;
 import com.yahoo.vespa.config.server.http.RequestTimeoutException;
 import com.yahoo.vespa.config.server.http.StaticResponse;
@@ -15,15 +18,19 @@ import org.junit.Before;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
 
-import java.net.URL;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.net.URI;
 import java.util.Arrays;
 import java.util.Collections;
 
 import static com.yahoo.config.model.api.container.ContainerServiceType.CLUSTERCONTROLLER_CONTAINER;
 import static com.yahoo.vespa.config.server.application.MockModel.createServiceInfo;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertSame;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -43,9 +50,9 @@ public class HttpProxyTest {
     }
 
     @Test
-    public void testNormalGet() throws Exception {
+    public void testNormalGet() {
         ArgumentCaptor<HttpFetcher.Params> actualParams = ArgumentCaptor.forClass(HttpFetcher.Params.class);
-        ArgumentCaptor<URL> actualUrl = ArgumentCaptor.forClass(URL.class);
+        ArgumentCaptor<URI> actualUrl = ArgumentCaptor.forClass(URI.class);
         HttpResponse response = new StaticResponse(200, "application/json", "body");
         when(fetcher.get(actualParams.capture(), actualUrl.capture())).thenReturn(response);
 
@@ -54,15 +61,43 @@ public class HttpProxyTest {
                                                 Query.parse("foo=bar"));
 
         assertEquals(1, actualParams.getAllValues().size());
-        assertEquals(2000, actualParams.getValue().readTimeoutMs);
+        assertEquals(29000, actualParams.getValue().readTimeoutMs);
 
         assertEquals(1, actualUrl.getAllValues().size());
-        assertEquals(new URL("http://" + hostname + ":" + port + "/clustercontroller-status/v1/clusterName?foo=bar"),
-                actualUrl.getValue());
+        assertEquals(URI.create("http://" + hostname + ":" + port + "/clustercontroller-status/v1/clusterName?foo=bar"),
+                     actualUrl.getValue());
 
         // The HttpResponse returned by the fetcher IS the same object as the one returned by the proxy,
         // when everything goes well.
         assertSame(actualResponse, response);
+    }
+
+    static String toJson(URI uri, String morePath) throws IOException {
+        Slime slime = new Slime();
+        slime.setObject().setString("url", HttpURL.from(uri).appendPath(Path.parse(morePath)).asURI().toString());
+        return new String(SlimeUtils.toJsonBytes(slime), UTF_8);
+    }
+
+    @Test
+    public void testNormalGetWithRewrite() throws Exception {
+        ArgumentCaptor<HttpFetcher.Params> actualParams = ArgumentCaptor.forClass(HttpFetcher.Params.class);
+        ArgumentCaptor<URI> actualUrl = ArgumentCaptor.forClass(URI.class);
+        doAnswer(invoc -> new StaticResponse(200, "application/json",
+                                             toJson(invoc.getArgument(1, URI.class), "/nested/path")))
+                .when(fetcher).get(actualParams.capture(), actualUrl.capture());
+
+        HttpResponse actualResponse = proxy.get(applicationMock, hostname, CLUSTERCONTROLLER_CONTAINER.serviceName,
+                                                Path.parse("/service/path"),
+                                                Query.parse("foo=%2F"),
+                                                HttpURL.from(URI.create("https://api:666/api/path%2E/with?foo=%2F")));
+
+        assertEquals(1, actualUrl.getAllValues().size());
+        assertEquals(URI.create("http://" + hostname + ":" + port + "/service/path?foo=%2F"),
+                     actualUrl.getValue());
+
+        ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+        actualResponse.render(buffer);
+        assertEquals("{\"url\":\"https://api:666/api/path./with/nested/path?foo=%2F\"}", buffer.toString(UTF_8));
     }
 
     @Test(expected = RequestTimeoutException.class)
