@@ -4,18 +4,20 @@ package com.yahoo.vespa.hosted.controller.restapi.application;
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.zone.ZoneId;
 import com.yahoo.container.jdisc.HttpResponse;
-import com.yahoo.test.json.JsonTestHelper;
+import com.yahoo.slime.SlimeUtils;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.ConfigServerException;
-import com.yahoo.vespa.hosted.controller.api.integration.deployment.ApplicationVersion;
-import com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType;
+import com.yahoo.vespa.hosted.controller.api.integration.deployment.RevisionId;
 import com.yahoo.vespa.hosted.controller.api.integration.deployment.TestReport;
+import com.yahoo.vespa.hosted.controller.application.TenantAndApplicationId;
 import com.yahoo.vespa.hosted.controller.application.pkg.ApplicationPackage;
 import com.yahoo.vespa.hosted.controller.deployment.ApplicationPackageBuilder;
+import com.yahoo.vespa.hosted.controller.deployment.DeploymentContext;
 import com.yahoo.vespa.hosted.controller.deployment.DeploymentTester;
+import com.yahoo.vespa.hosted.controller.notification.Notification.Type;
+import com.yahoo.vespa.hosted.controller.notification.NotificationSource;
 import org.junit.Test;
 
 import java.io.ByteArrayOutputStream;
-import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -25,18 +27,19 @@ import java.time.Instant;
 import java.util.Optional;
 
 import static com.yahoo.vespa.hosted.controller.api.integration.configserver.ConfigServerException.ErrorCode.INVALID_APPLICATION_PACKAGE;
-import static com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType.devAwsUsEast2a;
-import static com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType.devUsEast1;
-import static com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType.productionUsCentral1;
-import static com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType.productionUsEast3;
-import static com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType.productionUsWest1;
-import static com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType.stagingTest;
-import static com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType.systemTest;
-import static com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType.testUsCentral1;
+import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.devAwsUsEast2a;
+import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.devUsEast1;
+import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.productionUsCentral1;
+import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.productionUsEast3;
+import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.productionUsWest1;
+import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.stagingTest;
+import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.systemTest;
+import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.testUsCentral1;
 import static com.yahoo.vespa.hosted.controller.deployment.DeploymentContext.applicationPackage;
 import static com.yahoo.vespa.hosted.controller.deployment.RunStatus.deploymentFailed;
 import static com.yahoo.vespa.hosted.controller.deployment.RunStatus.installationFailed;
 import static com.yahoo.vespa.hosted.controller.deployment.RunStatus.running;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.Assert.assertEquals;
 
 /**
@@ -65,14 +68,14 @@ public class JobControllerApiHandlerHelperTest {
 
         // Revision 1 gets deployed everywhere.
         app.submit(applicationPackage).deploy();
-        ApplicationVersion revision1 = app.lastSubmission().get();
+        RevisionId revision1 = app.lastSubmission().get();
         assertEquals(1000, tester.application().projectId().getAsLong());
         // System test includes test report
         assertResponse(JobControllerApiHandlerHelper.runDetailsResponse(tester.jobs(), tester.jobs().last(app.instanceId(), systemTest).get().id(), "0"), "system-test-log.json");
 
         tester.clock().advance(Duration.ofMillis(1000));
         // Revision 2 gets deployed everywhere except in us-east-3.
-        ApplicationVersion revision2 = app.submit(applicationPackage).lastSubmission().get();
+        RevisionId revision2 = app.submit(applicationPackage).lastSubmission().get();
         app.runJob(systemTest);
         app.runJob(stagingTest);
         app.runJob(productionUsCentral1);
@@ -89,9 +92,9 @@ public class JobControllerApiHandlerHelperTest {
         tester.clock().advance(Duration.ofHours(4).plusSeconds(1));
         tester.runner().run();
         assertEquals(installationFailed, tester.jobs().last(app.instanceId(), productionUsWest1).get().status());
-        assertEquals(revision2, app.deployment(productionUsCentral1.zone(tester.controller().system())).applicationVersion());
-        assertEquals(revision1, app.deployment(productionUsEast3.zone(tester.controller().system())).applicationVersion());
-        assertEquals(revision2, app.deployment(productionUsWest1.zone(tester.controller().system())).applicationVersion());
+        assertEquals(revision2, app.deployment(productionUsCentral1.zone()).revision());
+        assertEquals(revision1, app.deployment(productionUsEast3.zone()).revision());
+        assertEquals(revision2, app.deployment(productionUsWest1.zone()).revision());
 
         tester.clock().advance(Duration.ofMillis(1000));
 
@@ -104,7 +107,7 @@ public class JobControllerApiHandlerHelperTest {
         assertEquals(running, tester.jobs().last(app.instanceId(), stagingTest).get().status());
 
         // Staging deployment expires and the job fails, and is immediately retried.
-        tester.controller().applications().deactivate(app.instanceId(), stagingTest.zone(tester.controller().system()));
+        tester.controller().applications().deactivate(app.instanceId(), stagingTest.zone());
         tester.runner().run();
         assertEquals(installationFailed, tester.jobs().last(app.instanceId(), stagingTest).get().status());
 
@@ -113,7 +116,7 @@ public class JobControllerApiHandlerHelperTest {
         tester.triggerJobs();
         tester.runner().run();
         assertEquals(running, tester.jobs().last(app.instanceId(), stagingTest).get().status());
-        tester.controller().applications().deactivate(app.instanceId(), stagingTest.zone(tester.controller().system()));
+        tester.controller().applications().deactivate(app.instanceId(), stagingTest.zone());
         tester.runner().run();
         assertEquals(installationFailed, tester.jobs().last(app.instanceId(), stagingTest).get().status());
 
@@ -131,14 +134,14 @@ public class JobControllerApiHandlerHelperTest {
         // Only us-east-3 is verified, on revision1.
         // staging-test has 5 runs: one success without sources on revision1, one success from revision1 to revision2,
         // one success from revision2 to revision3 and two failures from revision1 to revision3.
-        assertResponse(JobControllerApiHandlerHelper.runResponse(tester.jobs().runs(app.instanceId(), stagingTest), Optional.empty(), URI.create("https://some.url:43/root")), "staging-runs.json");
+        assertResponse(JobControllerApiHandlerHelper.runResponse(app.application(), tester.jobs().runs(app.instanceId(), stagingTest), Optional.empty(), URI.create("https://some.url:43/root")), "staging-runs.json");
         assertResponse(JobControllerApiHandlerHelper.runDetailsResponse(tester.jobs(), tester.jobs().last(app.instanceId(), stagingTest).get().id(), "0"), "staging-test-log.json");
         assertResponse(JobControllerApiHandlerHelper.runDetailsResponse(tester.jobs(), tester.jobs().last(app.instanceId(), productionUsEast3).get().id(), "0"), "us-east-3-log-without-first.json");
         assertResponse(JobControllerApiHandlerHelper.jobTypeResponse(tester.controller(), app.instanceId(), URI.create("https://some.url:43/root/")), "overview.json");
 
         var userApp = tester.newDeploymentContext(app.instanceId().tenant().value(), app.instanceId().application().value(), "user");
         userApp.runJob(devAwsUsEast2a, applicationPackage);
-        assertResponse(JobControllerApiHandlerHelper.runResponse(tester.jobs().runs(userApp.instanceId(), devAwsUsEast2a), Optional.empty(), URI.create("https://some.url:43/root")), "dev-aws-us-east-2a-runs.json");
+        assertResponse(JobControllerApiHandlerHelper.runResponse(app.application(), tester.jobs().runs(userApp.instanceId(), devAwsUsEast2a), Optional.empty(), URI.create("https://some.url:43/root")), "dev-aws-us-east-2a-runs.json");
         assertResponse(JobControllerApiHandlerHelper.jobTypeResponse(tester.controller(), userApp.instanceId(), URI.create("https://some.url:43/root/")), "overview-user-instance.json");
         assertResponse(JobControllerApiHandlerHelper.overviewResponse(tester.controller(), app.application().id(), URI.create("https://some.url:43/root/")), "deployment-overview-2.json");
     }
@@ -149,8 +152,8 @@ public class JobControllerApiHandlerHelperTest {
         var app = tester.newDeploymentContext();
         tester.clock().setInstant(Instant.EPOCH);
 
-        ZoneId zone = JobType.devUsEast1.zone(tester.controller().system());
-        tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.empty(), applicationPackage());
+        ZoneId zone = DeploymentContext.devUsEast1.zone();
+        tester.jobs().deploy(app.instanceId(), DeploymentContext.devUsEast1, Optional.empty(), applicationPackage());
         tester.configServer().setLogStream(() -> "1554970337.935104\t17491290-v6-1.ostk.bm2.prod.ne1.yahoo.com\t5480\tcontainer\tstdout\tinfo\tERROR: Bundle canary-application [71] Unable to get module class path. (java.lang.NullPointerException)\n");
         assertResponse(JobControllerApiHandlerHelper.runDetailsResponse(tester.jobs(), tester.jobs().last(app.instanceId(), devUsEast1).get().id(), null), "dev-us-east-1-log-first-part.json");
 
@@ -159,7 +162,7 @@ public class JobControllerApiHandlerHelperTest {
         tester.runner().run();
         assertResponse(JobControllerApiHandlerHelper.runDetailsResponse(tester.jobs(), tester.jobs().last(app.instanceId(), devUsEast1).get().id(), "8"), "dev-us-east-1-log-second-part.json");
 
-        tester.jobs().deploy(app.instanceId(), JobType.devUsEast1, Optional.empty(), applicationPackage());
+        tester.jobs().deploy(app.instanceId(), DeploymentContext.devUsEast1, Optional.empty(), applicationPackage());
         assertResponse(JobControllerApiHandlerHelper.jobTypeResponse(tester.controller(), app.instanceId(), URI.create("https://some.url:43/root")), "dev-overview.json");
     }
 
@@ -189,17 +192,16 @@ public class JobControllerApiHandlerHelperTest {
                        "jobs-direct-deployment.json");
     }
 
-    private void compare(HttpResponse response, String expected) throws IOException {
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        response.render(baos);
-        JsonTestHelper.assertJsonEquals(baos.toString(), expected);
-    }
-
     private void assertResponse(HttpResponse response, String fileName) {
         try {
             Path path = Paths.get("src/test/java/com/yahoo/vespa/hosted/controller/restapi/application/responses/").resolve(fileName);
-            String expected = Files.readString(path);
-            compare(response, expected);
+            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+            response.render(baos);
+            byte[] actualJson = SlimeUtils.toJsonBytes(SlimeUtils.jsonToSlimeOrThrow(baos.toByteArray()).get(), false);
+            // Files.write(path, actualJson);
+            byte[] expected = Files.readAllBytes(path);
+            assertEquals(new String(SlimeUtils.toJsonBytes(SlimeUtils.jsonToSlimeOrThrow(expected).get(), false), UTF_8),
+                         new String(actualJson, UTF_8));
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
